--- a/nw/index.html
+++ b/nw/index.html
@@ -9,86 +9,89 @@
 </head>
 
 <body>
-    <div class="topbar">
-        本地环境配置工具
-    </div>
-    <div class="container">
-        <aside class="sidebar">
-            <ul class="" id="J_side_tab">
-                <li class="active">
+    <div class="window">
+        <div class="topbar">
+            <span class="glyphicon glyphicon-remove-sign remove" onclick="window.close();"></span>
+            本地环境配置工具
+        </div>
+        <div class="container">
+            <aside class="sidebar">
+                <ul class="" id="J_side_tab">
+                    <li class="active">
 
-                    <a href="#J_tab_home" role="tab" data-toggle="tab">
-                        <span class="glyphicon glyphicon-home"></span>
-                        控制台
-                    </a>
-                </li>
-                <li>
-                    <a href="#J_tab_host" role="tab" data-toggle="tab">
-                        <span class="glyphicon glyphicon-list-alt"></span>
-                        Host
-                    </a>
-                </li>
-                <li>
-                    <a href="#J_tab_vhost" role="tab" data-toggle="tab">
-                        <span class="glyphicon glyphicon-send"></span>
-                        虚拟主机
-                    </a>
-                </li>
-            </ul>
-        </aside>
-        <section class="main">
-            <div class="tab-content">
-                <div class="tab-pane active" id="J_tab_home">
-                    <div class="ip">
-                        <p>当前IP：
-                            <input id="J_ip" readonly style="border: none; background-color: transparent; outline: none; font-size: 48px;">
-                        </p>
-                    </div>
-                    <div class="">
-                        <button id="J_restart" data-loading-text="重启中..." class="btn btn-primary">重启Apache</button>
-                    </div>
-                </div>
-                <div class="tab-pane" id="J_tab_host">
-                    <div class="">
-                        <h3>host操作</h3>
-                        <textarea id="J_host" rows="10" cols="100" class="form-control"></textarea>
-                        <br>
-                        <button id="J_read" data-loading-text="读取中" class="btn btn-default">读取host</button>
-                        <button id="J_write" class="btn btn-primary">写入host</button>
-                    </div>
-                </div>
-                <div class="tab-pane" id="J_tab_vhost">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <table class="table table-striped table-bordered">
-                                <caption>虚拟主机列表</caption>
-                                <thead>
-                                    <tr>
-                                        <th>域名</th>
-                                        <th>本地路径</th>
-                                        <th>操作</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="J_vhost_list"></tbody>
-                            </table>
-                            <div class="">
-                                <button id="J_vhost_add" class="btn btn-primary">添加一条记录</button>
-                            </div>
+                        <a href="#J_tab_home" role="tab" data-toggle="tab">
+                            <span class="glyphicon glyphicon-home"></span>
+                            控制台
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#J_tab_host" role="tab" data-toggle="tab">
+                            <span class="glyphicon glyphicon-list-alt"></span>
+                            Host
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#J_tab_vhost" role="tab" data-toggle="tab">
+                            <span class="glyphicon glyphicon-send"></span>
+                            虚拟主机
+                        </a>
+                    </li>
+                </ul>
+            </aside>
+            <section class="main">
+                <div class="tab-content">
+                    <div class="tab-pane active" id="J_tab_home">
+                        <div class="ip">
+                            <p>当前IP：
+                                <input id="J_ip" readonly style="border: none; background-color: transparent; outline: none; font-size: 48px;">
+                            </p>
+                        </div>
+                        <div class="">
+                            <button id="J_restart" data-loading-text="重启中..." class="btn btn-primary">重启Apache</button>
                         </div>
                     </div>
-                    <div>
-                        <h3>源码</h3>
-                        <button id="J_btn_read_vhost" data-loading-text="读取中" class="btn btn-default">读取vhost</button>
-                        <button id="J_btn_write_vhost" class="btn btn-primary">写入vhost</button>
-                        <br>
-                        <br>
-                        <textarea id="J_vhost" rows="10" cols="100" class="form-control"></textarea>
+                    <div class="tab-pane" id="J_tab_host">
+                        <div class="">
+                            <h3>host操作</h3>
+                            <textarea id="J_host" rows="15" cols="100" class="form-control"></textarea>
+                            <br>
+                            <button id="J_read" data-loading-text="读取中" class="btn btn-default">读取host</button>
+                            <button id="J_write" class="btn btn-primary">写入host</button>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="J_tab_vhost">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <table class="table table-striped table-bordered">
+                                    <caption>虚拟主机列表</caption>
+                                    <thead>
+                                        <tr>
+                                            <th>域名</th>
+                                            <th>本地路径</th>
+                                            <th>操作</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="J_vhost_list"></tbody>
+                                </table>
+                                <div class="">
+                                    <button id="J_vhost_add" class="btn btn-primary">添加一条记录</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <h3>源码</h3>
+                            <button id="J_btn_read_vhost" data-loading-text="读取中" class="btn btn-default">读取vhost</button>
+                            <button id="J_btn_write_vhost" class="btn btn-primary">写入vhost</button>
+                            <br>
+                            <br>
+                            <textarea id="J_vhost" rows="15" cols="100" class="form-control"></textarea>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        
+            </section>
+        </div>
     </div>
+    
     <!--vhost条目模板-->
     <script type="x-tmpl-mustache" id="J_tmpl_vhost_item">{{#data}}
         <tr data-name="{{name}}" data-root="{{root}}" data-proxy="{{_proxy}}" data-input="{{input}}">
