--- a/nw/index.html
+++ b/nw/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>本地环境工具</title>
+    <title>本地环境配置工具</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
     <!--link(rel='stylesheet', href='/bootstrap/css/bootstrap-theme.min.css')-->
     <link rel="stylesheet" href="./css/style.css">
@@ -200,11 +200,7 @@
     <script src="./js/jquery.min.js"></script>
     <script src="./bootstrap/js/bootstrap.min.js"></script>
     <script src="./js/mustache.js"></script>
-    <script src="./js/api.js"></script>
     <script src="./js/index.js"></script>
-    <script>
-
-    </script>
 </body>
 
 </html>
