--- a/nw/index.html
+++ b/nw/index.html
@@ -26,37 +26,7 @@
       <section class="main">
         <div class="tab-content">
           <div id="J_tab_home" class="tab-pane">
-            <h4>使用帮助</h4>
-            <ul>
-              <li><strong>修改host方法</strong>
-                <p>1. 进入host修改页面，先点击读取，然后在编辑框修改host，修改完毕后点击保存即可.</p>
-              </li>
-              <li><strong>新建虚拟主机本地访问方法</strong>
-                <p>1. 进入虚拟主机管理页面，点击添加</p>
-                <p>2. 输入域名和本地路径，点击提交</p>
-                <p>3. 点击左栏的重启apache</p>
-                <p>4. host里面加入刚才的域名，指向127.0.0.1，保存</p>
-                <p>5. 浏览器访问刚加的域名</p>
-              </li>
-              <li><strong>手机访问电脑的虚拟主机方法</strong>
-                <p>1. 进入dns页面，添加一个虚拟主机已有域名，如demo.laiwang.com</p>
-                <p>2. 同局域网的手机设置dns为当前电脑ip</p>
-                <p>3. 手机访问demo.laiwang.com</p>
-              </li>
-              <li><strong>虚拟主机的反向代理配置方法</strong>
-                <p><i>先确保已经设置dns和虚拟主机</i></p>
-                <p>1. 本地开启调试环境，如http://localhost:9000/</p>
-                <p>2. 虚拟主机添加反向代理，如： /   http://localhost:9000/</p>
-                <p>3. 手机访问之前配置的域名</p>
-              </li>
-              <li><strong>DNS设置方法</strong>
-                <p>支持以下3种配置方式：<br><code>demo.laiwang.com</code>将demo.laiwang.com代理到本机<br><code>demo.laiwang.com demo2.laiwang.com</code>将demo.laiwang.com demo2.laiwang.com 代理到本机<br><code>10.68.108.15 demo.laiwang.com demo2.laiwang.com</code>将demo.laiwang.com demo2.laiwang.com代理到10.68.108.15</p>
-              </li>
-            </ul>
-            <h4>常见问题</h4>
-            <ul>
-              <li>待添加...</li>
-            </ul>
+            <h2>Welcome!</h2>
           </div>
           <div id="J_tab_host" class="tab-pane">
             <h3>host操作</h3>
